I think it's finished!
Although it sure is very crappy. I suck at design anyways.

--- a/index.html
+++ b/index.html
@@ -21,18 +21,29 @@
 
             <form>
                 <p>Let's do this!</p>
-                <div class="grid">
-                    <div class="left-elements">
-                        <label>First Name</label></br>
-                        <input type="text"></div></br>
-                        <label>Email</label>
-                    </div>
-                    <div class="right-elements">
-                        <label>Last Name</label></br>
-                        <input type="text">
-                    </div>
-                </div>
+                        <div class="form-stuff">
+                            <div class="left">
+                            <label>First Name</label></br>
+                            <input type="text"></br>
+                            <label>Email</label></br>
+                            <input type="text"></br>
+                            <label>Password</label></br>
+                            <input type="text"></div>
+
+                            <div class="right">
+                                <label>Last Name</label></br>
+                                <input type="text"></br>
+                                <label>Phone Number</label></br>
+                                <input type="text"></br>
+                                <label>Confirm Password</label></br>
+                                <input type="text">
+                            </div>
+                        </div>
+    
             </form>
+
+            <button>Create Account</button>
+            <p>Already have an account?<span style="color: #596D48"> Log in</span></p>
         </main>
     </body>
 </html>
