Oh wait I'd forgotten the logo section.
Well fixed it! Now it's finished.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     </head>
     <body>
         <aside>
-            <img src="./assets/background.jpg">
+            <div class="logo">
+                <img src="./assets/odin-lined.png">
+                <p>ODIN</p>
+            </div>
+            <img src="./assets/background.jpg" class="background">
         </aside>
 
         <main>
